Membuat file Doctors, Login, MyProfile, MyAppointment & update Navbar & fix index.css

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,10 +20,20 @@
   /* ... */
 }
 
-.active hr{
-  @apply block
+* {
+    font-family: Outfit;
 }
 
-::-webkit-scrollbar{
-  @apply hidden
+.active hr {
+    @apply block
+}
+
+@media (max-width:740px) {
+    .active  p{
+       @apply text-white bg-primary
+    }
+}
+
+::-webkit-scrollbar {
+    @apply hidden
 }
